--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-langchain<0.100.0
-guardrails-ai==0.4.0
-pydantic==1.10.9
-typer[all]==0.9.0
-python-dotenv>=0.21.0
-openai>=0.27.0
-gradio>=3.26.0
-faiss-cpu>=1.7.3
-
+langchain
+guardrails-ai
+pydantic
+typer[all]
+python-dotenv
+openai
+gradio
+faiss-cpu
+langchain-community
+langdetect
+googletrans
+youtube-transcript-api
+watchdog
