--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ langchain-openai
 langdetect
 googletrans
 youtube-transcript-api
+google-api-python-client
+deep-translator
 
 # dev dependencies
 watchdog
